--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name: Digest-SHA3
-version: 0.01
+version: 0.02
 abstract: Perl extension for SHA-3
 license: perl
 author:
@@ -8,9 +8,9 @@ author:
 requires:
   perl: 5.003
 provides:
-  Digest::SHA:
+  Digest::SHA3:
     file: lib/Digest/SHA3.pm
-    version: 0.01
+    version: 0.02
 meta-spec:
   version: 1.3
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
